<resources>
    <string name="app_name">亚健康守护</string>

    <!--底端菜单-->
    <string name="bluetooth">蓝牙</string>
    <string name="information">信息</string>
    <string name="profile">我</string>


    <!--蓝牙-->
    <string name="bleScan">扫描附近的蓝牙设备</string>
    <string name="bleDisScanned">停止扫描</string>
    <string name="bleConnect">连接蓝牙</string>
    <string name="bleDisConnect">断开连接</string>
    <string name="bleCollect">采集数据</string>
    <string name="bleDisCollect">停止采集</string>
    <string name="bleRealTime">实时波形显示</string>

    <!--历史数据-->

    <!--我-->
    <string name="profileQuit">注销</string>
    <string name="profileLogin">登录</string>
    <string name="profileRegister">注册</string>

    <!--登录-->
    <string name="loginTitle">登录</string>
    <string name="loginUsername">账号:</string>
    <string name="loginUsernameHint">请输入您的用户名</string>
    <string name="loginPassword">密码:</string>
    <string name="loginPasswordHint">请输入您的密码</string>
    <string name="loginIsRemembered">记住账户和密码</string>
    <string name="loginLogin">登录</string>
    <string name="loginRegister">注册</string>


    <!--注册-->
    <string name="registerTitle">注册</string>
    <string name="registerUsername">账号:</string>
    <string name="registerUsernameHint">zhangsan</string>
    <string name="registerPassword">密码:</string>
    <string name="registerPasswordHint">1234</string>
    <string name="registerName">姓名:</string>
    <string name="registerNameHint">张三</string>
    <string name="registerGender">性别:</string>
    <string name="registerAge">年龄:</string>
    <string name="registerAgeHint">18</string>
    <string name="registerHeight">身高:</string>
    <string name="registerHeightHint">175.0</string>
    <string name="registerWeight">体重:</string>
    <string name="registerWeightHint">70.0</string>
    <string name="registerPhone">手机:</string>
    <string name="registerPhoneHint">13512345678</string>
    <string name="registerIdentity">身份:</string>
    <string name="registerRegister">注册</string>

</resources>
