<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginUsername"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/firstTextSize" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginUsernameHint"
            android:inputType="textPersonName"
            android:textSize="@dimen/firstTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginPassword"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/firstTextSize" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:textSize="@dimen/firstTextSize" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/loginIsRemembered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/loginIsRemembered"
        android:textSize="@dimen/secondTextSize" />

    <Button
        android:id="@+id/loginLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_margin="@dimen/margin"
        android:text="@string/loginLogin"
        android:textSize="@dimen/buttonTextSize" />

    <Button
        android:id="@+id/loginRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_margin="@dimen/margin"
        android:text="@string/loginRegister"
        android:textSize="@dimen/buttonTextSize" />

</LinearLayout>
