<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <Button
        android:id="@+id/bleScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal"
        android:layout_marginVertical="@dimen/vertical"
        android:text="@string/bleScan"
        android:textSize="@dimen/buttonTextSize" />

    <ListView
        android:id="@+id/bleDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/BLEManger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/bleConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/bleConnect"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/bleStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/bleCollect"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/bleRealTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/bleRealTime"
            android:textSize="@dimen/buttonTextSize" />

    </LinearLayout>

</LinearLayout>
