<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/horizontal"
        android:paddingBottom="64dp">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_128dp" />

        <ListView
            android:id="@+id/profileProfile"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profileLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/profileLogin"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/profileRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/profileRegister"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/profileQuit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginHorizontal="@dimen/horizontal"
            android:layout_marginVertical="@dimen/vertical"
            android:text="@string/profileQuit"
            android:textSize="@dimen/buttonTextSize" />

    </LinearLayout>
</ScrollView>